src/test/deca/syntax/valid/resultats/test5_spaces-lex.res
'{': [@0,235:235='{',<36>,18:0]
'println': [@1,238:244='println',<18>,19:1]
'(': [@2,245:245='(',<34>,19:8]
STRING: [@3,249:255='"Hello"',<47>,20:1]
')': [@4,264:264=')',<35>,22:5]
';': [@5,266:266=';',<39>,22:7]
'}': [@6,277:277='}',<37>,24:0]
