src/test/deca/syntax/invalid/resultats/test33_main_class-lex.res
'{': [@0,331:331='{',<36>,15:0]
'}': [@1,335:335='}',<37>,17:0]
'class': [@2,338:342='class',<7>,19:0]
IDENT: [@3,344:344='A',<26>,19:6]
'{': [@4,346:346='{',<36>,19:8]
'}': [@5,348:348='}',<37>,20:0]
